// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sqle/Order/Detail/OrderHistorySteps render snap when list is empty 1`] = `
<body>
  <div>
    <div
      class="css-vzbzkc"
    >
      <div
        class="history-steps-trigger-wrapper"
      >
        <span>
          工单操作历史
        </span>
        <span
          class="custom-icon custom-icon-arrow-down css-u3jcp4"
          role="img"
        >
          <svg
            fill="currentColor"
            height="14"
            viewBox="0 0 14 14"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6.99999 7.68364L9.88749 4.79614L10.7123 5.62098L6.99999 9.33331L3.28766 5.62098L4.11249 4.79614L6.99999 7.68364Z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</body>
`;

exports[`sqle/Order/Detail/OrderHistorySteps render when list is arr 1`] = `
<body>
  <div>
    <div
      class="css-vzbzkc"
    >
      <div
        class="history-steps-trigger-wrapper"
      >
        <span>
          工单操作历史
        </span>
        <span
          class="custom-icon custom-icon-arrow-down css-u3jcp4"
          role="img"
        >
          <svg
            fill="currentColor"
            height="14"
            viewBox="0 0 14 14"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6.99999 7.68364L9.88749 4.79614L10.7123 5.62098L6.99999 9.33331L3.28766 5.62098L4.11249 4.79614L6.99999 7.68364Z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</body>
`;

exports[`sqle/Order/Detail/OrderHistorySteps render when list is arr 2`] = `
<body>
  <div>
    <div
      class="css-vzbzkc"
    >
      <div
        class="history-steps-trigger-wrapper"
      >
        <span>
          工单操作历史
        </span>
        <span
          class="custom-icon custom-icon-arrow-up css-u3jcp4"
          role="img"
        >
          <svg
            fill="currentColor"
            height="14"
            viewBox="0 0 14 14"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6.99993 6.31629L4.11243 9.20379L3.2876 8.37896L6.99993 4.66663L10.7123 8.37896L9.88743 9.20379L6.99993 6.31629Z"
            />
          </svg>
        </span>
      </div>
      <div
        class="custom-steps-wrapper"
      >
        <div
          class="custom-steps-wrapper-title"
        >
          工单进度
        </div>
        <div
          class="ant-steps ant-steps-vertical css-1epey7k css-dev-only-do-not-override-txh9fw"
        />
      </div>
    </div>
  </div>
</body>
`;

exports[`sqle/Order/Detail/OrderHistorySteps render when list is arr 3`] = `
<body>
  <div>
    <div
      class="css-vzbzkc"
    >
      <div
        class="history-steps-trigger-wrapper"
      >
        <span>
          工单操作历史
        </span>
        <span
          class="custom-icon custom-icon-arrow-down css-u3jcp4"
          role="img"
        >
          <svg
            fill="currentColor"
            height="14"
            viewBox="0 0 14 14"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6.99999 7.68364L9.88749 4.79614L10.7123 5.62098L6.99999 9.33331L3.28766 5.62098L4.11249 4.79614L6.99999 7.68364Z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</body>
`;
